# stm32f303re_blink

./: Cargo.toml  README.md  install.sh
.cargo/: config.toml
src/: config.rs  main.rs
