[package]
name = "stm32f303re-blink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stm32f303re-blink"
test = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [
    "stm32f303re",
    "time-driver-any",
    "exti",
    "memory-x",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.5.0" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.9.2"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[profile.dev]
debug = 2
lto = false
opt-level = "s"
